package com.company.model.core;

public interface IStorable {
    Position getPosition();

    void setPosition(double x, double y);
}
