@startuml

title __CORE's Class Diagram__\n

  package com.company.model.core {
    interface IPositionable {
        {abstract} + getX()
        {abstract} + getY()
        {abstract} + getDirection()
        {abstract} + setPosition()
        {abstract} + setDirection()
        {abstract} + changeDirection()
    }
  }
  

  package com.company.model.core {
    interface IStorable {
        {abstract} + getPosition()
        {abstract} + setPosition()
    }
  }
  

  package com.company.model.core {
    interface IStorage {
        {abstract} + addLoad()
        {abstract} + getFIFO()
        {abstract} + getFILO()
        {abstract} + getLoad()
        {abstract} + setLoad()
        {abstract} + getCapacity()
        {abstract} + setCapacity()
    }
  }
  

  package com.company.model.core {
    interface ITransportable {
    }
  }
  

  package com.company.model.core {
    class Position {
        - x : double
        - y : double
        - direction : double
        + Position()
        + getX()
        + getY()
        + getDirection()
        + setPosition()
        + setDirection()
        + changeDirection()
    }
  }
  

  package com.company.model.core {
    class Storage {
        - load : Deque<T>
        - capacity : int
        + Storage()
        + getPosition()
        + setPosition()
        + addLoad()
        + getFIFO()
        + getFILO()
        + getLoad()
        + setLoad()
        + getCapacity()
        + setCapacity()
    }
  }
  

  package com.company.model.core {
    class Tuple {
        + Tuple()
        + fst: A
        + snd: B
    }
  }
  

  Position -up-|> IPositionable
  Storage -up-|> IStorage
  Storage o-- Position : position


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
